--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,20 @@ server.port=8081
 #spring.zipkin.base-url=http://localhost:9411
 #spring.sleuth.sampler.probability=1.0
 
-#Amicrometer
+#micrometer
 management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
-management.endpoints.web.exposure.include=*
 spring.main.allow-circular-references=true
+
+# Spring boot admin server 
+spring.boot.admin.client.url=http://localhost:8085
+ 
+# Actuator endpoints properties
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+ 
+# To monitor log file on admin server
+logging.file.name=demo_api.log
+logging.logback.rollingpolicy.max-history=5
+logging.logback.rollingpolicy.max-file-size=10MB
