--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,13 @@ server.port=8081
 #spring.sleuth.sampler.probability=1.0
 
 #micrometer
-management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+#management.tracing.sampling.probability=1.0
+#management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 
 spring.main.allow-circular-references=true
 
 # Spring boot admin server 
-spring.boot.admin.client.url=http://localhost:8085
+#spring.boot.admin.client.url=http://localhost:8085
  
 # Actuator endpoints properties
 management.endpoints.web.exposure.include=*
@@ -22,3 +22,8 @@ management.endpoint.health.show-details=always
 logging.file.name=demo_api.log
 logging.logback.rollingpolicy.max-history=5
 logging.logback.rollingpolicy.max-file-size=10MB
+
+#Activemq
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
